[gd_scene load_steps=3 format=3 uid="uid://dmjexnv25vlq6"]

[ext_resource type="Script" uid="uid://d2m81i46djlij" path="res://towers/tower.gd" id="1_uyl23"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8ea8w"]
light_mode = 1

[node name="Tower" type="Node2D" groups=["tower"]]
script = ExtResource("1_uyl23")

[node name="SelectedPolygon" type="Polygon2D" parent="."]
visible = false
rotation = 1.5708
polygon = PackedVector2Array(-41, 33, 0, -52, 43, 33)

[node name="Polygon2D" type="Polygon2D" parent="."]
material = SubResource("CanvasItemMaterial_8ea8w")
rotation = 1.5708
color = Color(0.696, 0.24, 1, 1)
polygon = PackedVector2Array(-36, 30, 0, -46, 38, 30)

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ClickArea"]
rotation = 1.5708
polygon = PackedVector2Array(-36, 30, 0, -46, 38, 30)

[node name="CostBar" type="ProgressBar" parent="."]
offset_left = -48.0
offset_top = 38.0
offset_right = 26.0
offset_bottom = 48.0
rotation = -1.5708
show_percentage = false

[node name="HintArrow" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-3, -47, 5, -33, 13, -47)

[node name="HintArrow2" type="Polygon2D" parent="."]
visible = false
z_index = 30
position = Vector2(129, 141)
polygon = PackedVector2Array(-3, -47, 5, -33, 13, -47)

[node name="HintArrow3" type="Polygon2D" parent="."]
visible = false
z_index = 30
position = Vector2(456, -169)
rotation = -1.5708
polygon = PackedVector2Array(-3, -47, 5, -33, 13, -47)
